--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/codegrind_db
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://52.66.249.130:3306/codegrind_db
+spring.datasource.username=codegrind
 spring.datasource.password=abcd1234
 
 spring.datasource.hikari.connection-timeout=20000
